# mize-modules

./: .gitmodules  LICENSE  README.md  external-modules.nix  external_modules.nix  mize_module.nix
modules/Blob/: Cargo.toml  mize_module.nix
modules/Blob/src/: lib.rs
modules/Instance/: type.toml
modules/Item/: type.toml
modules/String/: Cargo.toml  mize_module.nix
modules/String/src/: lib.rs
modules/dev/: Cargo.toml  dev  mize_module.nix  run
modules/dev/src/: lib.rs  main.rs  tui.rs
