[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mize = { git = "https://github.com/c2vi/mize", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
