[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
clap = "4.5.26"
cmd_lib = "1.9.5"
color-eyre = "0.6.3"
colored = "3.0.0"
crossterm = "0.28.1"
flume = "0.11.1"
libc = "0.2.169"
#mize = { git = "https://github.com/c2vi/mize", default-features = false }
mize = { path = "/home/me/work/mize", default-features = false, features = ["os-target"] }
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
shell-words = "1.1.0"
waitpid-any = "0.2.1"


[lib]
name = "mize_module_dev"
crate-type =["cdylib", "rlib"]
